--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,13 @@ p {
   max-width: 42rem;
 }
 
+@media (min-width: 768px) {
+  .header {
+    max-width: 144rem;
+    padding: 9rem 11rem 3.25rem;
+  }
+}
+
 .header__heading,
 .header__paragraph {
   text-align: center;
@@ -61,6 +68,12 @@ p {
 .header__heading {
   font-size: 2.4rem;
   font-weight: 200;
+}
+
+@media (min-width: 768px) {
+  .header__heading {
+    font-size: 4.2rem;
+  }
 }
 
 .header__heading--bold {
@@ -79,6 +92,19 @@ p {
   padding: 3.75rem 3rem 8rem 3rem;
 }
 
+@media (min-width: 768px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 11.5rem);
+    column-gap: 1rem;
+    row-gap: 2rem;
+
+    max-width: 144rem;
+    padding: 3.25rem 1rem 8rem;
+  }
+}
+
 .card {
   padding: 3.5rem 3rem 3rem;
   background-color: white;
@@ -95,6 +121,12 @@ p {
   border-top: 0.4rem solid var(--cyan);
 }
 
+@media (min-width: 768px) {
+  .card {
+    margin: 0;
+  }
+}
+
 .card:nth-of-type(2) {
   border-top: 0.4rem solid var(--red);
 }
@@ -105,6 +137,28 @@ p {
 
 .card:nth-of-type(4) {
   border-top: 0.4rem solid var(--blue);
+}
+
+@media (min-width: 768px) {
+  .card:nth-of-type(1) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .card:nth-of-type(2) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .card:nth-of-type(3) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 5;
+  }
+
+  .card:nth-of-type(4) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
 }
 
 .card:last-of-type {
