--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,14 @@ p {
 @media (min-width: 768px) {
   .header {
     max-width: 144rem;
-    padding: 9rem 11rem 3.25rem;
+    /* padding: 9rem 11rem 3.25rem; */
+    padding: 9rem calc((100% - 52.5rem) / 2) 3.25rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .header {
+    padding: 9rem 45.75rem 3.25rem;
   }
 }
 
@@ -72,6 +79,7 @@ p {
 
 @media (min-width: 768px) {
   .header__heading {
+    /* font-size: 4.5rem; */
     font-size: 4.2rem;
   }
 }
@@ -96,12 +104,30 @@ p {
   .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 11.5rem);
+    grid-template-rows: repeat(4, 11rem);
     column-gap: 1rem;
-    row-gap: 2rem;
+    row-gap: 3rem;
 
     max-width: 144rem;
     padding: 3.25rem 1rem 8rem;
+  }
+}
+
+@media (min-width: 1090px) {
+  .cards {
+    row-gap: 3rem;
+    column-gap: 3rem;
+  }
+}
+@media (min-width: 1130px) {
+  .cards {
+    padding: 3.25rem calc((100% - 111rem) / 2) 8rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .cards {
+    padding: 3.25rem 16.5rem 8rem;
   }
 }
 
@@ -123,6 +149,7 @@ p {
 
 @media (min-width: 768px) {
   .card {
+    max-width: 35rem;
     margin: 0;
   }
 }
@@ -183,10 +210,12 @@ p {
 .attribution {
   max-width: 144rem;
   margin: 0 auto;
+  padding: 2.5rem;
 }
 
 .attribution__paragraph {
   text-align: center;
+  margin: 0;
 }
 
 .attribution__front,
